--- a/style.css
+++ b/style.css
@@ -202,15 +202,16 @@ section {
 
 .section__text__p1 {
     text-align: center;
+    font-size: .85rem;
 }
 
-.section__text__p1 {
+.section__text__p2 {
     font-size: 1.75rem;
     margin-bottom: 1rem;
 }
 
 .title {
-    font-size: 3 rem;
+    font-size: 3rem;
     text-align: center;
 }
 
@@ -278,4 +279,147 @@ section {
     gap: 1rem;
 }
 
+
+/* ABOUT SECTION */
+
+#about {
+ position: relative;
+}
+
+.about-container {
+    gap: 2rem;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+}
+
+.about-details-container {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.about-container ,
+.about-details-container{
+    display: flex;
+}
+
+.about-pic {
+    border-radius: 2rem;
+}
+
+.arrow {
+    position: absolute;
+    right: -5rem;
+    bottom: 2.5rem;
+}
+
+.details-container {
+    padding: .5rem;
+    flex: 1;
+    background: white;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    text-align: center;
+}
+
+.section-container {
+    gap: 4rem;
+    height: 80%;
+}
+
+.section__pic-container {
+    height: 400px;
+    width: 400px;
+    margin: auto 0;
+}
+
+
+/* EXPERIENCE SECTION */
+
+#experience {
+    position: relative;
+}
+
+.experience-sub-title {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-bottom: 1.25rem;
+}
+
+.experience-details-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+
+}
+
+.experience-details-container:nth-of-type(2) {
+    margin-top: -35px; /* Reduce this value as needed */
+}
+
+.article-container {
+    display: flex;
+    text-align: initial;
+    flex-wrap: wrap;
+    flex-direction: row;
+    gap: 2rem;
+    justify-content: space-around;
+}
+
+article {
+    display: flex;
+    width: 10rem;
+    justify-content: space-around;
+    gap: 0.5rem;
+}
+
+article .icon {
+    cursor: default;
+}
+
+
+/* PROJECTS SECTION */
+
+#projects {
+    position: relative;
+}
+
+.color-container {
+    border-color: rgb(163, 163, 163);
+    background: rgb(250 , 250 , 250);
+}
+
+.project-img {
+    border-radius: 2rem;
+    width: 90%;
+    height: 90%;
+    margin-top: 1rem;
+}
+
+.project-title {
+    color: black;
+    font-weight: 600;
+    font-size: 1.5rem;
+    margin-top: 1.25rem;
+    margin-bottom: 0.25rem;
+}
+
+.project-subtitle {
+    color: rgb(85, 85, 85);
+    font-weight: 600;
+    font-size: 1rem;
+    margin-bottom: 0.5rem;
+}
+
+.project-container {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+}
+
+.project-description{
+    text-align: center;
+    margin-bottom: 1rem;
+}
 
