--- a/media_queries.css
+++ b/media_queries.css
@@ -1,4 +1,16 @@
-/* Hides desktop nav and shows ham if small*/
+@media screen and (max-width: 1400px){
+    #profile {
+        height: 83vh;
+        margin-bottom: 6rem;
+    }
+
+    .about-containers {
+        flex-wrap: wrap;
+    }
+}
+
+/* Hides desktop nav and shows ham if small */
+/* & manages if screen is too small */
 @media screen and (max-width: 1200px){
     #desktop-nav{
         display: none;
@@ -6,5 +18,117 @@
     #hamburguer-menu-nav{
         display: flex;
     }
+    #experience , .experience-details-container {
+        margin-top: 2rem;
+    }
+    #profile , .section-container {
+        display: block;
+    }
+    .arrow {
+        display: none;
+    }
+    section, .section-container {
+        height: fit-content;
+    }
+    section {
+        margin: 0 5%;
+    }
+    .section__pic-container {
+        width: 175px;
+        height: 175px;
+        margin: 0 auto 2rem;
+    }
+    .about-containers {
+        margin-top: 0;
+    }
+    .circular-img{
+        width: 175px; 
+        height: 175px; 
+    }
+    .title {
+        font-size: 2.5rem;
+    }
+    .section__text_p2 {
+        margin-bottom: 0.4rem;
+    }
+    h3 {
+        font-size: 1rem;
+    }
+    .project-btn{
+        margin-top: 0.1rem;
+        margin-bottom: 0.2rem;
+    }
 }
 
+@media screen and (max-width: 600px){
+    #contact, #footer {
+        height: 40vh;
+    }
+
+    #profile {
+        height: 83vh;
+        margin-bottom: 0;
+    }
+
+    article {
+        font-size: 1rem;
+    }
+
+    footer nav {
+        height: fit-content;
+        margin-bottom: 2rem;
+    }
+
+    .about-containers,
+    .contact-info-upper-container,
+    .btn-container {
+        flex-wrap: wrap;
+    }
+
+    .contact-info-container {
+        margin: 0;
+    }
+
+    .contact-info-container p,
+    .nav-links li a {
+        font-size: 0.75rem;
+    }
+
+    .logo {
+        font-size: 1rem;
+    }
+    
+    .nav-links {
+        flex-direction: column;
+        gap: 0rem;
+        text-align: center;
+    }
+
+    .section__pic-container {
+        width: auto;
+        height: 46vw;
+        justify-content: center;
+    }
+
+    .section__text_p2 {
+        font-size: 1rem;
+    }
+
+    .title {
+        font-size: 2rem;
+    }
+
+    .text-container {
+        text-align: justify;
+    }
+
+    .details-container {
+        margin: 0rem;
+        padding: 0.35rem;
+    }
+
+    .experience-details-container {
+        padding: 0;
+        align-items: center;
+    }
+}
