--- a/style.css
+++ b/style.css
@@ -423,3 +423,59 @@ article .icon {
     margin-bottom: 1rem;
 }
 
+
+/* CONTACT SECTION */
+
+#contact {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+
+.contact-info-upper-container {
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: rgb(163, 163, 163);
+    background: rgb(250 , 250 , 250);
+    margin: 2rem auto;
+    padding: 0.75rem;
+}
+
+.contact-info-container {
+    display: flex;
+    justify-content: center;
+    gap: 0.25rem;
+    align-items: center;
+    margin: 1rem;
+}
+
+.contact-info-container p {
+    font-weight: larger;
+}
+
+.contact-icon {
+    cursor: default;
+}
+
+.email-icon {
+    height: 2.5rem;
+}
+
+
+/* FOOTER */
+
+footer {
+    justify-content: center;
+    align-items: center;
+    height: 25vh;
+    background: rgb(250 , 250 , 250);
+    
+}
+
+footer p {
+    text-align: center;
+}
