--- a/media_queries.css
+++ b/media_queries.css
@@ -131,4 +131,9 @@
         padding: 0;
         align-items: center;
     }
+
+    .opt-img-2{
+        height: 3rem;
+        width: 4.5rem;
+    }
 }
