solved_about-pic

--- a/media_queries.css
+++ b/media_queries.css
@@ -37,6 +37,7 @@
         width: 175px;
         height: 175px;
         margin: 0 auto 2rem;
+        margin-bottom: 2.5rem;
     }
     .about-containers {
         margin-top: 0;
