maybe final fix

--- a/media_queries.css
+++ b/media_queries.css
@@ -109,6 +109,7 @@
         width: auto;
         height: 46vw;
         justify-content: center;
+        margin-bottom: 2.5rem;
     }
 
     .section__text_p2 {
