--- a/media_queries.css
+++ b/media_queries.css
@@ -37,7 +37,8 @@
         width: 175px;
         height: 175px;
         margin: 0 auto 2rem;
-        margin-bottom: 2.5rem;
+        margin-bottom: 5.5rem;
+        justify-content: center;
     }
     .about-containers {
         margin-top: 0;
