--- a/media_queries.css
+++ b/media_queries.css
@@ -60,6 +60,19 @@
         margin-top: 0.1rem;
         margin-bottom: 0.2rem;
     }
+    
+    .project-media-container {
+        height: 200px;
+    }
+    
+    .media-display {
+        height: 160px;
+    }
+    
+    #projects .details-container {
+        min-height: 400px;
+        padding: 1rem;
+    }
 }
 
 @media screen and (max-width: 600px){
@@ -138,5 +151,23 @@
     .opt-img-2{
         height: 3rem;
         width: 4.5rem;
+    }
+    
+    .project-media-container {
+        height: 150px;
+    }
+    
+    .media-display {
+        height: 120px;
+    }
+    
+    #projects .details-container {
+        min-height: 350px;
+        padding: 0.75rem;
+    }
+    
+    .media-btn {
+        padding: 0.3rem 0.6rem;
+        font-size: 0.7rem;
     }
 }
