--- a/style.css
+++ b/style.css
@@ -364,7 +364,7 @@ section {
     padding: 1.5rem;
     display: flex;
     flex-direction: column;
-    min-height: 500px;
+    height: 500px;
 }
 
 .section-container {
