Solving styling of the containers -> Function to equalize project containers height to the max-container-height depending on page size

--- a/media_queries.css
+++ b/media_queries.css
@@ -80,7 +80,8 @@
     }
     
     #projects .details-container {
-        height: 400px;
+        min-height: 400px;
+        height: auto;
         padding: 1rem;
     }
     
@@ -206,7 +207,8 @@
     }
     
     #projects .details-container {
-        height: 350px;
+        min-height: 350px;
+        height: auto;
         padding: 0.75rem;
     }
     
